--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-    <!-- SEO basic -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Basic -->
     <title>InspirA+ | Artist Xenia Botea | Original Art & Workshops</title>
 
     <meta name="description"
@@ -13,26 +16,31 @@
 
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph (Facebook/WhatsApp) -->
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://corina-ionelia.github.io/InspirArt-/" />
+
+    <!-- Open Graph (Facebook / WhatsApp) -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="InspirA+ | Xenia Botea" />
     <meta property="og:description"
         content="Original artworks, fine art prints, workshops & courses by Xenia Botea (InspirA+ Studio)." />
-    <meta property="og:url" content="https://corina-ionelia.github.io/InspirArt-1/" />
-    <meta property="og:image" content=https://corina-ionelia.github.io/InspirArt-1/?update=1 />
+    <meta property="og:url" content="https://corina-ionelia.github.io/InspirArt-/" />
+    <meta property="og:image" content="https://corina-ionelia.github.io/InspirArt-/imagini/og-cover.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <!-- Twitter (merge și pentru alte preview-uri) -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="InspirA+ | Xenia Botea" />
     <meta name="twitter:description"
         content="Original artworks, fine art prints, workshops & courses by Xenia Botea (InspirA+ Studio)." />
-    <meta name="twitter:image" content="https://corina-ionelia.github.io/InspirArt-1/imagini/og-cover.jpg" />
+    <meta name="twitter:image" content="https://corina-ionelia.github.io/InspirArt-/imagini/og-cover.jpg" />
 
     <!-- Icons -->
     <link rel="icon" href="imagini/cropped-fav.png" />
     <link rel="apple-touch-icon" href="imagini/apple-touch-icon.png" />
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
 </head>
 
