--- a/about.html
+++ b/about.html
@@ -7,22 +7,15 @@
     <title>About – Xenia Botea</title>
 
     <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
-
-    <!-- Global CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Montserrat:wght@300;400;500&display=swap"
-        rel="stylesheet" />
 </head>
 
 <body>
-
     <!-- ================= HEADER ================= -->
     <section id="header">
-        <div class="header container">
-            <div class="nav-bar">
+        <div class="header">
+            <div class="nav-bar container">
                 <div class="brand">
                     <a href="index.html" aria-label="Home">
                         <img src="imagini/logo.svg" alt="InspirA+ Logo" class="logo" />
@@ -43,6 +36,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </section>
@@ -56,10 +50,7 @@
         </div>
     </div>
 
-    <!-- ================= PAGE WRAP ================= -->
     <main class="about-page">
-
-        <!-- ================= ABOUT SECTION ================= -->
         <section class="about-section">
             <div class="wrap">
                 <h1 class="big-title">ABOUT ME</h1>
@@ -82,7 +73,6 @@
             </div>
         </section>
 
-        <!-- ================= ART SECTION ================= -->
         <section class="art-section">
             <div class="wrap">
                 <div class="art-row">
@@ -98,7 +88,6 @@
             </div>
         </section>
 
-        <!-- ================= CREDENTIALS ================= -->
         <section class="credentials">
             <div class="wrap">
                 <h2 class="section-title">MY CREDENTIALS</h2>
@@ -122,7 +111,6 @@
             </div>
         </section>
 
-        <!-- ================= QUOTE ================= -->
         <section class="quote-section">
             <div class="wrap">
                 <h2 class="quote-text">Every piece of art I create holds a piece of me forever.</h2>
@@ -130,7 +118,6 @@
             </div>
         </section>
 
-        <!-- ================= RECENT PROJECT ================= -->
         <section class="recent">
             <div class="wrap">
                 <h2 class="section-title">MY MOST RECENT PROJECT</h2>
@@ -149,7 +136,6 @@
             </div>
         </section>
 
-        <!-- ================= COLLABORATE ================= -->
         <section class="collaborate">
             <div class="wrap">
                 <div class="collab-row">
@@ -168,9 +154,7 @@
                 </div>
             </div>
         </section>
-
     </main>
-    <!-- ================= END PAGE WRAP ================= -->
 
     <!-- Footer -->
     <section id="footer">
@@ -181,20 +165,13 @@
 
             <div class="footer-welcome">
                 <h3 class="footer-title">WELCOME!</h3>
-
-                <p class="footer-text">
-                    Hi! Welcome to my world! I’m artist Xenia Botea.
+                <p class="footer-text">Hi! Welcome to my world! I’m artist Xenia Botea.</p>
+                <p class="footer-text">Here you will find my original artworks, fine art prints and workshops. My art
+                    comes to life in many different ways. I hope you’ll enjoy your time here, and thank you for
+                    collecting.
                 </p>
-
-                <p class="footer-text">
-                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
-                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
-                </p>
-
-                <p class="footer-text">
-                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
-                    love to hear from you!
-                </p>
+                <p class="footer-text">If you’d like to connect with me, feel free to drop me an email or follow me on
+                    social media. I’d love to hear from you!</p>
             </div>
 
             <div class="social-icons">
@@ -230,7 +207,6 @@
     <a href="https://wa.me/40758312756" target="_blank" rel="noopener" class="whatsapp-float">
         <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
     </a>
-
 </body>
 
 </html>
